samples/_failures_safe/1761161370_4efef5_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_5bc202a2.c:2:2: error: expected ‘;’ before ‘typedef’
    2 | c
      |  ^
      |  ;
./samples/SAFE/__tmp_5bc202a2.c: In function ‘main’:
./samples/SAFE/__tmp_5bc202a2.c:160:13: error: expected expression at end of input
  160 |             case
      |             ^~~~
./samples/SAFE/__tmp_5bc202a2.c:160:13: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_5bc202a2.c:160:13: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_5bc202a2.c:160:13: error: expected declaration or statement at end of input
